--- a/src/telas/CadastroFuncionario.form
+++ b/src/telas/CadastroFuncionario.form
@@ -25,7 +25,7 @@
     </Container>
   </NonVisualComponents>
   <Properties>
-    <Property name="defaultCloseOperation" type="int" value="3"/>
+    <Property name="defaultCloseOperation" type="int" value="2"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -84,9 +84,9 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="cbBairro" alignment="1" min="-2" pref="127" max="-2" attributes="0"/>
+                          <Component id="jdcDataNascimento" min="-2" pref="127" max="-2" attributes="0"/>
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jdcDataNascimento" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -151,7 +151,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="CIDADE DA LIVRARIA"/>
+        <Property name="text" type="java.lang.String" value=" LIVRARIA"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JComboBox" name="cbCidadeLivraria">
@@ -165,6 +165,9 @@
           </StringArray>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbCidadeLivrariaActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
@@ -263,6 +266,8 @@
         <Property name="text" type="java.lang.String" value="ID"/>
       </Properties>
     </Component>
+    <Component class="com.toedter.calendar.JDateChooser" name="jdcDataNascimento">
+    </Component>
     <Component class="javax.swing.JComboBox" name="cbBairro">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
@@ -285,8 +290,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="BAIRRO"/>
       </Properties>
-    </Component>
-    <Component class="com.toedter.calendar.JDateChooser" name="jdcDataNascimento">
     </Component>
   </SubComponents>
 </Form>
